<resources>
    <string name="app_name">LoginMVVM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="enter_name">Enter Name</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account? Login here.</string>
    <string name="new_user_sign_up">New USer? Sign up</string>
    <string name="confirm_password">Confirm Password</string>
</resources>